Implement FEX-Emu on ARM64 inspired by EthanHand